k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: davidbrown77/dream-vacation-app-backend:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/destinations
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
